cleaned a ton of stuff up